test/parser/should_fail/comments.souc.bad
import Modu

main() = do
    x <- ; bad place for a comment
    print x
